# flappy_rs

./: .gitignore  Cargo.toml  build.rs
db/: Save.jsondb
src/: background.rs  constant.rs  ferris.rs  fps_counter.rs  game_state.rs  main.rs  pillar.rs  pillar_container.rs  save_system.rs  score_board.rs  shit.rs
