[package]
name = "flappy_rs"
version = "0.1.0"
authors = ["Boss <bossnathakorn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.1"
rand = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
json_db_rs = { git = "https://github.com/1t2t3t4t/json_db_rs", version = "0.3.1" }
